--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -8,7 +8,7 @@
       <th class="num">V</th>
       <th class="num">2</th>
       <th class="num">P</th>
-      <th class="num">PPS</th>
+      <th class="num">PPK</th>
     </tr>
   </thead>
   <tbody>
