feat: add next and add another

--- a/templates/games.html
+++ b/templates/games.html
@@ -4,23 +4,24 @@
     <thead>
       <tr>
         <th>Dato</th>
-        <th>Deltagere</th>
+        <th style="white-space: nowrap">Vinder</th>
+        <th style="white-space: nowrap">2. plads</th>
+        <th>Resterende</th>
       </tr>
     </thead>
     <tbody>
       {{if .Games}} {{range .Games}}
       <tr>
         <td>{{.PlayedAt.Format "2006-01-02"}}</td>
+        <td style="white-space: nowrap">{{.Winner.Emoji}} {{.Winner.Name}}</td>
+        <td style="white-space: nowrap">{{.Second.Emoji}} {{.Second.Name}}</td>
         <td>
-          {{range $i, $p := .Participants}} {{if $i}}, {{end}} {{if eq $i
-          0}}<strong>{{$p.Emoji}} {{$p.Name}}</strong>{{else if eq $i 1}}<em
-            >{{$p.Emoji}} {{$p.Name}}</em
-          >{{else}}{{$p.Emoji}} {{$p.Name}}{{end}} {{end}}
+          {{range $i, $p := .Others}} {{if $i}} {{end}} {{$p.Emoji}} {{end}}
         </td>
       </tr>
       {{end}} {{else}}
       <tr>
-        <td colspan="2">Ingen spil registreret endnu.</td>
+        <td colspan="4">Ingen spil registreret endnu.</td>
       </tr>
       {{end}}
     </tbody>
