--- a/templates/new.html
+++ b/templates/new.html
@@ -12,7 +12,7 @@
     hx-swap="innerHTML"
     class="stack"
   >
-    <div>
+    <div class="stack">
       <p>Vælg deltagere:</p>
       {{template "player_list" .}}
     </div>
