fix: missing og tag

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,7 @@
     <meta property="og:image" content="/static/hest.jpg" />
     <meta property="og:title" content="🐴 Stilling" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hest.lol/" />
     <title>Stilling</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <link rel="stylesheet" href="/static/app.css" />
