--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:image" content="/static/hest.jpg" />
+    <meta property="og:image" content="https://hest.lol/static/hest.jpg" />
     <meta property="og:title" content="🐴 Stilling" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hest.lol/" />
