--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,6 +19,7 @@
         <span id="horse-icon" style="cursor: pointer;">🐴</span>
         <a href="/" {{if eq .Path "/"}}class="active"{{end}}>Stilling</a>
         <a href="/games" {{if eq .Path "/games"}}class="active"{{end}}>Kampe</a>
+        <a href="/h2h" {{if eq .Path "/h2h"}}class="active"{{end}}>H2H</a>
         <a href="/new" class="push {{if eq .Path "/new"}}active{{end}}">Tilføj kamp</a>
       </nav>
       <audio id="horse-sound" preload="auto">
