--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -2,37 +2,37 @@
 <table class="table" id="leaderboard">
   <thead>
     <tr>
-      <th class="rank">#</th>
+      <th class="rank"><abbr title="Placering">#</abbr></th>
       <th class="name"></th>
       <th class="num sortable"
           hx-get="/?sort=games&dir={{if and (eq .SortBy "games") (eq .SortDir "desc")}}asc{{else}}desc{{end}}"
           hx-target="#leaderboard"
           hx-swap="outerHTML">
-        K{{if eq .SortBy "games"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
+        <abbr title="Kampe">K</abbr>{{if eq .SortBy "games"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
       </th>
       <th class="num sortable"
           hx-get="/?sort=wins&dir={{if and (eq .SortBy "wins") (eq .SortDir "desc")}}asc{{else}}desc{{end}}"
           hx-target="#leaderboard"
           hx-swap="outerHTML">
-        V{{if eq .SortBy "wins"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
+        <abbr title="Vundet">V</abbr>{{if eq .SortBy "wins"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
       </th>
       <th class="num sortable"
           hx-get="/?sort=seconds&dir={{if and (eq .SortBy "seconds") (eq .SortDir "desc")}}asc{{else}}desc{{end}}"
           hx-target="#leaderboard"
           hx-swap="outerHTML">
-        2{{if eq .SortBy "seconds"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
+        <abbr title="2. plads">2</abbr>{{if eq .SortBy "seconds"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
       </th>
       <th class="num sortable"
           hx-get="/?sort=points&dir={{if and (eq .SortBy "points") (eq .SortDir "desc")}}asc{{else}}desc{{end}}"
           hx-target="#leaderboard"
           hx-swap="outerHTML">
-        P{{if eq .SortBy "points"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
+        <abbr title="Point">P</abbr>{{if eq .SortBy "points"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
       </th>
       <th class="num sortable"
           hx-get="/?sort=ppg&dir={{if and (eq .SortBy "ppg") (eq .SortDir "desc")}}asc{{else}}desc{{end}}"
           hx-target="#leaderboard"
           hx-swap="outerHTML">
-        PPK{{if eq .SortBy "ppg"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
+        <abbr title="Point pr. kamp">PPK</abbr>{{if eq .SortBy "ppg"}}{{if eq .SortDir "desc"}} ▼{{else}} ▲{{end}}{{end}}
       </th>
     </tr>
   </thead>
