--- a/templates/new.html
+++ b/templates/new.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <div class="stack">
+    <div class="score-selects">
       <label class="stack">
         <span>Vinder</span>
         <select name="winner_id">
