fix: missing nowrap

--- a/templates/player.html
+++ b/templates/player.html
@@ -32,7 +32,7 @@
   </div>
   <div class="stat">
     <span class="stat-label responsive-label">
-      <span class="label-full">Point pr. kamp</span>
+      <span class="label-full nowrap">Point pr. kamp</span>
       <abbr class="label-short" title="Point pr. kamp">PPK</abbr>
     </span>
     <span class="stat-value">{{printf "%.2f" .Player.PPG}}</span>
