feat: chart ranking over time

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="🐴" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hest.lol/" />
-    <title>Stilling</title>
+    <title>{{.Title}}</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <link rel="stylesheet" href="/static/app.css" />
     <link rel="icon" href="/static/favicon.svg" />
