--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="https://hest.lol/" />
     <title>{{.Title}}</title>
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="https://cdn.counter.dev/script.js" data-id="4095a605-a908-4fd5-bf8f-5900185e9a73" data-utcoffset="1"></script>
     <link rel="stylesheet" href="/static/app.css" />
     <link rel="icon" href="/static/favicon.svg" />
   </head>
