fix: add position to detail

--- a/templates/player.html
+++ b/templates/player.html
@@ -4,6 +4,13 @@
 <div class="player-stats">
   <div class="stat">
     <span class="stat-label responsive-label">
+      <span class="label-full">Position</span>
+      <abbr class="label-short" title="Position">#</abbr>
+    </span>
+    <span class="stat-value">{{.Rank}}</span>
+  </div>
+  <div class="stat">
+    <span class="stat-label responsive-label">
       <span class="label-full">Kampe</span>
       <abbr class="label-short" title="Kampe">K</abbr>
     </span>
